--- a/css/style.css
+++ b/css/style.css
@@ -98,5 +98,32 @@ div img{
 }
 
 .hero h2{
-    
-}
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: medium;
+    text-align: left;
+    letter-spacing: 1px;
+    padding: 0;
+    margin: 0;
+  }
+
+  .hero p{
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  button{
+    border-radius: 0px;
+    background-color: #e6814b;
+    color: white;
+    border: none;
+    padding: 8px 20px;
+    font-family: "Bebas Neue", sans-serif;
+    transition: background 2s;
+  }
+
+  button:hover{
+    background: white;
+    color: #e6814b;
+    cursor: pointer;
+  }
