--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 body{
-    display: flex;
     align-content: center;
     justify-content: center;
     margin: 0;
@@ -102,28 +101,41 @@ nav {
     letter-spacing: 1.5px;
 }
 
+.pie p{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .barra-lateral i{
     padding-right: 10%;
 }
 
 
 .hero {
-    width: 100%;
-    
+    display: flex;
+    justify-content: baseline;
+    align-items: center;
+    padding-left: 30%;
 }
 
+.hero img{
+    height: 600px;
+    padding-top: 15%;
+}
 
+.hero-content{
+    margin-left: 5%;
+    padding-top: 10%;
+}
 
-
-.hero h1{
+.hero-content h1{
     font-family: "Bebas Neue", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  letter-spacing: 2px;
-  width: 40%;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 2px;
+    width: 40%;
 }
 
-.hero h2{
+.hero-content h2{
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -135,7 +147,7 @@ nav {
     color: #905a1b;
   }
 
-  .hero p{
+  .hero-content p{
     font-family: Arial, Helvetica, sans-serif;
     width: 50%;
   }
