--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,10 @@
-@media(max-width:320px){}
+@media(max-width:320px){
+    nav{
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+}
 @media(max-width:480px){}
 @media(max-width:768px){}
 @media(max-width:1024px){}
