--- a/css/style.css
+++ b/css/style.css
@@ -7,21 +7,18 @@ body{
 
 nav {
     position: fixed;
-    display: inline-flex;
-    margin: 0;
-    padding: 0;
-    right: 5%;
+    display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 30%;
+    justify-content: space-evenly;
+    width: 70%;
     flex-direction: row-reverse;
-
+    background-color: white;
+    padding-left: 35%;
 }
 
 .contact{
     text-decoration: underline 2px white;
     transition: 1s;
-
 }
 
 .contact:hover{
@@ -33,7 +30,6 @@ nav {
 .services{
     text-decoration: underline 2px white;
     transition: 1s;
-
 }
 
 .services:hover{
@@ -169,4 +165,25 @@ nav {
     cursor: pointer;
   }
 
- 
+ .works{
+    margin-top: 15%;
+    padding-left: 30%;
+    justify-content: center;
+    align-items: center;
+    font-family: "Bebas Neue", sans-serif;
+ }
+
+.works img{
+    height: 450px;
+    width: 450px;
+    color: none;
+}
+
+.proyects{
+    justify-content: center;
+    margin-left: 40%;
+    margin-top: 15px;
+    width: 150px;
+    height: 60px;
+}
+
