--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
 
 nav {
     position: fixed;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: space-evenly;
     width: 70%;
@@ -185,5 +185,38 @@ nav {
     margin-top: 15px;
     width: 150px;
     height: 60px;
+}
+
+.AES{
+    justify-content: center;
+    align-items: center;
+    padding-left: 30%;
+    padding-top: 10%;
+}
+
+.AES h1{
+    font-family: "Bebas Neue", sans-serif;
+    letter-spacing: 1.5px;
+}
+
+.aboutme{
+    width: 80%;
+}
+
+.ES{
+    display: flex;
+}
+
+.education{
+    width: 40%;
+}
+
+.skills{
+    width: 40%;
+}
+
+.skills img{
+    width: 100%;
+    height: 100%;
 }
 
