--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body{
     justify-content: center;
     margin: 0;
     padding: 0;
+    color: #2a1911;
 }
 
 nav {
@@ -14,6 +15,7 @@ nav {
     flex-direction: row-reverse;
     background-color: white;
     padding-left: 35%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .contact{
@@ -111,11 +113,13 @@ nav {
     justify-content: baseline;
     align-items: center;
     padding-left: 30%;
+    font-size: x-large;
+    width: 90%;
 }
 
 .hero img{
     height: 600px;
-    padding-top: 15%;
+    padding-top: 10%;
 }
 
 .hero-content{
@@ -131,11 +135,26 @@ nav {
     width: 40%;
 }
 
+.hero div{
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-left: -13%;
+}
+.hero hr{
+    color: #905a1b;
+    width: 65px;
+    border: solid 1px #905a1b;
+    margin-left: 0;
+    margin-right: 15px;
+    justify-content: flex-start;
+}
 .hero-content h2{
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: medium;
+    font-size: x-large;
     text-align: left;      /*CORREGIR TIPO DE LETRA*/
     letter-spacing: 1px;
     padding: 0;
@@ -170,7 +189,11 @@ nav {
     padding-left: 30%;
     justify-content: center;
     align-items: center;
+ }
+ .works h1{
     font-family: "Bebas Neue", sans-serif;
+    font-size: xx-large;
+    letter-spacing: 2px;
  }
 
 .works img{
@@ -181,9 +204,9 @@ nav {
 
 .proyects{
     justify-content: center;
-    margin-left: 40%;
+    margin-left: 32%;
     margin-top: 15px;
-    width: 150px;
+    width: 300px;
     height: 60px;
 }
 
@@ -196,7 +219,8 @@ nav {
 
 .AES h1{
     font-family: "Bebas Neue", sans-serif;
-    letter-spacing: 1.5px;
+    font-size: xx-large;
+    letter-spacing: 2px;
 }
 
 .aboutme{
@@ -229,8 +253,8 @@ nav {
 
 .servicios h1{
     font-family: "Bebas Neue", sans-serif;
-    letter-spacing: 1.5px;
     font-size: xx-large;
+    letter-spacing: 2px;
     padding: 0;
     margin: 0;
 }
@@ -261,6 +285,7 @@ nav {
     border: 1.5px solid #e9e8e8;
     box-shadow: 5px 5px 5px #e9e8e8;
 }
+
 
 .galeria{
     width: 30%;
@@ -319,7 +344,7 @@ form{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 30%;
+    width: 45%;
     margin-bottom: 10%;
 
 }
@@ -360,3 +385,38 @@ form h2{
     margin-left: 8%;
 }
 
+.vias-contacto h2{
+    font-family: "Bebas Neue", sans-serif;
+    font-size: xx-large;
+    letter-spacing: 2px;
+}
+
+.vias-contacto h3{
+    font-family: "Bebas Neue", sans-serif;
+    letter-spacing: 2px;
+}
+
+.vias-contacto p{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.phone{
+    border: 1.5px solid #e9e8e8;
+    padding-left: 5%;
+    width: 250px;
+    margin-bottom: 5%;
+}
+
+.email{
+    border: 1.5px solid #e9e8e8;
+    padding-left: 5%;
+    width: 250px;
+    margin-bottom: 5%;
+}
+
+.address{
+    border: 1.5px solid #e9e8e8;
+    padding-left: 5%;
+    width: 250px;
+    margin-bottom: 5%;
+}
