--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body{
     justify-content: center;
     margin: 0;
     padding: 0;
-    color: #2a1911;
+    color: var(--form-bg-color);
 }
 
 nav {
@@ -13,53 +13,62 @@ nav {
     justify-content: space-evenly;
     width: 70%;
     flex-direction: row-reverse;
-    background-color: white;
+    background-color: var(--hero-bg-color);
     padding-left: 35%;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+:root{
+    --barra-lateral-bg-color: #e6814b;
+    --hero-bg-color: white;
+    --text-decoration-color: #905a1b;
+    --form-bg-color: #2a1911;
+    --form-text-color: #888787;
+    --border-color: #e9e8e8;
+}
+
 .contact{
-    text-decoration: underline 2px white;
+    text-decoration: underline 2px var(--hero-bg-color);
     transition: 1s;
 }
 
 .contact:hover{
-    text-decoration: underline 2px #905a1b;
+    text-decoration: underline 2px var(--text-decoration-color);
     cursor: pointer;
 
 }
 
 .services{
-    text-decoration: underline 2px white;
+    text-decoration: underline 2px var(--hero-bg-color);
     transition: 1s;
 }
 
 .services:hover{
-    text-decoration: underline 2px #905a1b;
+    text-decoration: underline 2px var(--text-decoration-color);
     cursor: pointer;
 
 }
 
 .about{
-    text-decoration: underline 2px white;
+    text-decoration: underline 2px var(--hero-bg-color);
     transition: 1s;
 
 }
 
 .about:hover{
-    text-decoration: underline 2px #905a1b;
+    text-decoration: underline 2px var(--text-decoration-color);
     cursor: pointer;
 
 }
 
 .portfolio{
-    text-decoration: underline 2px white;
+    text-decoration: underline 2px var(--hero-bg-color);
     transition: 1s;
 
 }
 
 .portfolio:hover{
-    text-decoration: underline 2px #905a1b;
+    text-decoration: underline 2px var(--text-decoration-color);
     cursor: pointer;
 
 }
@@ -74,11 +83,11 @@ nav {
     top: 0;
     justify-content: center;
     align-items: center;
-    background-color: #e6814b;
+    background-color: var(--barra-lateral-bg-color);
     height: 100%;
     text-align: left;
     width: 20%;
-    color: white;
+    color: var(--hero-bg-color);
  }
 
 .barra-lateral .encabezado{
@@ -143,9 +152,9 @@ nav {
     margin-left: -13%;
 }
 .hero hr{
-    color: #905a1b;
+    color: var(--text-decoration-color);
     width: 65px;
-    border: solid 1px #905a1b;
+    border: solid 1px var(--text-decoration-color);
     margin-left: 0;
     margin-right: 15px;
     justify-content: flex-start;
@@ -159,7 +168,7 @@ nav {
     letter-spacing: 1px;
     padding: 0;
     margin: 0;
-    color: #905a1b;
+    color: var(--text-decoration-color);
   }
 
   .hero-content p{
@@ -169,8 +178,8 @@ nav {
 
   button{
     border-radius: 0px;
-    background-color: #e6814b;
-    color: white;
+    background-color: var(--barra-lateral-bg-color);
+    color: var(--hero-bg-color);
     border: none;
     padding: 12px 18px;
     font-family: "Bebas Neue", sans-serif;
@@ -179,8 +188,8 @@ nav {
   }
 
   button:hover{
-    background: white;
-    color: #e6814b;
+    background: var(--hero-bg-color);
+    color: var(--barra-lateral-bg-color);
     cursor: pointer;
   }
 
@@ -282,16 +291,16 @@ nav {
     width: 30%;
     margin-top: 5%;
     padding-left: 1%;
-    border: 1.5px solid #e9e8e8;
-    box-shadow: 5px 5px 5px #e9e8e8;
+    border: 1.5px solid var(--border-color);
+    box-shadow: 5px 5px 5px var(--border-color);
 }
 
 
 .galeria{
     width: 30%;
     padding-left: 1%;
-    border: 1.5px solid #e9e8e8;
-    box-shadow: 5px 5px 5px #e9e8e8;
+    border: 1.5px solid var(--border-color);
+    box-shadow: 5px 5px 5px var(--border-color);
     margin-left: 2%;
 
 }
@@ -299,16 +308,16 @@ nav {
 .portafolios{
     width: 30%;
     padding-left: 1%;
-    border: 1.5px solid #e9e8e8;
-    box-shadow: 5px 5px 5px #e9e8e8;
+    border: 1.5px solid var(--border-color);
+    box-shadow: 5px 5px 5px var(--border-color);
     margin-top: 2%;
 }
 
 .formularios{
     width: 30%;
     padding-left: 1%;
-    border: 1.5px solid #e9e8e8;
-    box-shadow: 5px 5px 5px #e9e8e8;
+    border: 1.5px solid var(--border-color);
+    box-shadow: 5px 5px 5px var(--border-color);
     margin-left: 2%;
     margin-top: 2%;
 }
@@ -316,8 +325,8 @@ nav {
 .transiciones{
     width: 30%;
     padding-left: 1%;
-    border: 1.5px solid #e9e8e8;
-    box-shadow: 5px 5px 5px #e9e8e8;
+    border: 1.5px solid var(--border-color);
+    box-shadow: 5px 5px 5px var(--border-color);
     margin-top: 2%;
 
 }
@@ -325,8 +334,8 @@ nav {
 .paginas-web{
     width: 30%;
     padding-left: 1%;
-    border: 1.5px solid #e9e8e8;
-    box-shadow: 5px 5px 5px #e9e8e8;
+    border: 1.5px solid var(--border-color);
+    box-shadow: 5px 5px 5px var(--border-color);
     margin-left: 2%;
     margin-top: 2%;
 }
@@ -338,8 +347,8 @@ nav {
 }
 
 form{
-    background-color: #2a1911;
-    color: white;
+    background-color: var(--form-bg-color);
+    color: var(--hero-bg-color);
     border: none;
     flex-direction: column;
     justify-content: center;
@@ -350,11 +359,11 @@ form{
 }
 
 form input{
-    background-color: #2a1911;
+    background-color: var(--form-bg-color);
     border-top: none;
     border-left: none;
     border-right: none;
-    border-bottom: solid 1px #7c6e69;
+    border-bottom: solid 1px var(--form-text-color);
     padding-top: 8%;
     padding-bottom: 2%;
     font-family: Arial, Helvetica, sans-serif;
@@ -401,21 +410,21 @@ form h2{
 }
 
 .phone{
-    border: 1.5px solid #e9e8e8;
+    border: 1.5px solid var(--form-text-color);
     padding-left: 5%;
     width: 250px;
     margin-bottom: 5%;
 }
 
 .email{
-    border: 1.5px solid #e9e8e8;
+    border: 1.5px solid var(--form-text-color);
     padding-left: 5%;
     width: 250px;
     margin-bottom: 5%;
 }
 
 .address{
-    border: 1.5px solid #e9e8e8;
+    border: 1.5px solid var(--form-text-color);
     padding-left: 5%;
     width: 250px;
     margin-bottom: 5%;
