--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,177 @@
-@media(max-width:320px){}
-@media(max-width:480px){}
+@media(max-width:320px){
+    .barra-lateral .encabezado{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 1%;
+        margin-left: 15%;
+    }
+    .pie .email--{
+        font-size: xx-small;
+    }
+    .barra-lateral .pie{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 1%;
+    }
+    .navbar{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .hero{
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-left: 20%;
+    }
+
+    .hero img{
+        margin-top: 50%;
+    }
+
+    .hero button{
+        width: 80%;
+    }
+
+    .works{
+        margin-left: 20%;
+        align-items: center;
+        align-content: center;
+        width: 80%;
+        margin-right: 10%;
+    }
+    .works img{
+      height: 250px;
+      width: 250px;
+    }
+    .works button{
+        width: 80%;
+        margin-right: 30%;
+    }
+    .AES .aboutme{
+        align-items: center;
+        justify-content: center;
+        margin-left: 30%;
+    }
+    .AES .ES{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .AES .ES .skills img{
+        width: 300px;
+    }
+
+    .AES .ES .education{
+        width: 80%;
+        margin-left: 40%;
+    }
+
+    .servicios{
+        padding-left: 20%;
+    }
+
+    .contacto{
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        margin-left: 20%;
+    }
+
+    .contacto .vias-contacto{
+        margin-left: 20%;
+        width: 80%;
+    }
+
+}
+@media(max-width:480px){
+    .barra-lateral .encabezado{
+        justify-content: center;
+        align-items: center;
+        margin-right: 30%;
+    }
+    .pie .email--{
+        font-size: x-small;
+    }
+    .barra-lateral .pie{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 50%;
+    }
+    .navbar{
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        padding-left: 50%;
+    }
+    .hero{
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-left: 10%;
+    }
+
+    .hero img{
+        margin-top: 50%;
+    }
+
+    .hero button{
+        width: 95%;
+    }
+
+    .works{
+        margin-left: 9%;
+        align-items: center;
+        align-content: center;
+        width: 80%;
+    }
+    .works img{
+      height: 250px;
+      width: 250px;
+      margin-left: -1.7%;
+    }
+    .works button{
+        width: 90%;
+        margin-left: 15%;
+    }
+    .AES .aboutme{
+        align-items: center;
+        justify-content: center;
+        margin-left: 30%;
+    }
+    .AES .ES{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .AES .ES .skills img{
+        width: 300px;
+    }
+
+    .AES .ES .education{
+        width: 80%;
+        margin-left: 40%;
+    }
+
+    .servicios{
+        padding-left: 20%;
+    }
+
+    .contacto{
+        flex-direction: column;
+        align-items: center;
+        width: 120%;
+        margin-left: 10%;
+    }
+
+    .contacto .vias-contacto{
+        margin-left: 20%;
+        width: 80%;
+    }
+}
 @media(max-width:768px){}
 @media(max-width:1024px){}
 @media(max-width:1280px){}
