--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ nav {
 .barra-lateral .encabezado{
     display: flex;
     align-items: center;
-    padding-bottom: 120%;
+    padding-bottom: 100%;
 }
 
 .barra-lateral .encabezado p{
@@ -121,9 +121,9 @@ nav {
     display: flex;
     justify-content: baseline;
     align-items: center;
-    padding-left: 30%;
+    margin-left: 30%;
     font-size: x-large;
-    width: 90%;
+    width: 70%;
 }
 
 .hero img{
@@ -149,7 +149,7 @@ nav {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-left: -13%;
+    margin-left: -23%;
 }
 .hero hr{
     color: var(--text-decoration-color);
@@ -173,7 +173,7 @@ nav {
 
   .hero-content p{
     font-family: Arial, Helvetica, sans-serif;
-    width: 50%;
+    width: 60%;
   }
 
   button{
@@ -184,7 +184,7 @@ nav {
     padding: 12px 18px;
     font-family: "Bebas Neue", sans-serif;
     transition: background 2s;
-    width: 25%;
+    width: 35%;
   }
 
   button:hover{
@@ -195,7 +195,7 @@ nav {
 
  .works{
     margin-top: 15%;
-    padding-left: 30%;
+    margin-left: 30%;
     justify-content: center;
     align-items: center;
  }
@@ -206,13 +206,14 @@ nav {
  }
 
 .works img{
-    height: 450px;
-    width: 450px;
+    width: 45%;
+    display: inline-flex;
+    flex-wrap: wrap;
 }
 
 .proyects{
     justify-content: center;
-    margin-left: 32%;
+    margin-left: 30%;
     margin-top: 15px;
     width: 300px;
     height: 60px;
@@ -221,7 +222,7 @@ nav {
 .AES{
     justify-content: center;
     align-items: center;
-    padding-left: 30%;
+    margin-left: 30%;
     padding-top: 10%;
 }
 
@@ -232,7 +233,7 @@ nav {
 }
 
 .aboutme{
-    width: 80%;
+    width: 70%;
 }
 
 .ES{
@@ -241,11 +242,12 @@ nav {
 }
 
 .education{
-    width: 40%;
+    width: 35%;
 }
 
 .skills{
-    width: 40%;
+    width: 30%;
+    margin-left: 5%;
 }
 
 .skills img{
@@ -255,7 +257,7 @@ nav {
 
 .servicios{
     margin-left: 30%;
-    width: 100%;
+    width: 70%;
     margin-top: 15%;
 }
 
@@ -410,21 +412,21 @@ form h2{
 
 .phone{
     border: 1.5px solid var(--form-text-color);
-    padding-left: 5%;
-    width: 250px;
+    padding-left: 4%;
+    width: 100%;
     margin-bottom: 5%;
 }
 
 .email{
     border: 1.5px solid var(--form-text-color);
-    padding-left: 5%;
-    width: 250px;
+    padding-left: 4%;
+    width: 100%;
     margin-bottom: 5%;
 }
 
 .address{
     border: 1.5px solid var(--form-text-color);
-    padding-left: 5%;
-    width: 250px;
+    padding-left: 4%;
+    width: 100%;
     margin-bottom: 5%;
 }
