se realizaron los cambios correspondientes en responsive. Responsive terminado

--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ nav {
     flex-wrap: wrap;
 }
 
-.proyects{
+.works-button{
     justify-content: center;
     margin-left: 30%;
     margin-top: 15px;
